versioned_docs/version-2026.1.1/professor/sergio_ricardo_ferrazoli.mdx
---
sidebar_label: 'Sergio Ricardo Ferrazoli'
---

import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Sergio Ricardo Ferrazoli",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Fundamentos de informática - 2558",
          "size": 2,
          "teachers": [
            "Sergio Ricardo Ferrazoli"
          ],
          "classroom": "laboratorio_de_informatica_b_-_cr_toledo",
          "students": [
            "IIW2026B"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "PROJETO INTEGRADOR I (549)",
          "size": 1,
          "teachers": [
            "Sergio Ricardo Ferrazoli"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2025B-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "LÓGICA DE PROGRAMAÇÃO (547)",
          "size": 1,
          "teachers": [
            "Sergio Ricardo Ferrazoli"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2025B-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "PROJETO INTEGRADOR I (549)",
          "size": 1,
          "teachers": [
            "Sergio Ricardo Ferrazoli"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2025B-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "LINGUAGENS DE APRESENTAÇÃO E ESTRUTURAÇÃO DE CONTEÚDOS (546)",
          "size": 1,
          "teachers": [
            "Sergio Ricardo Ferrazoli"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2025B-DP"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "LÓGICA DE PROGRAMAÇÃO (547)",
          "size": 1,
          "teachers": [
            "Sergio Ricardo Ferrazoli"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2025B-DP"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "LINGUAGENS DE APRESENTAÇÃO E ESTRUTURAÇÃO DE CONTEÚDOS (546)",
          "size": 1,
          "teachers": [
            "Sergio Ricardo Ferrazoli"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2025B-DP"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": []
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Sergio Ricardo Ferrazoli

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

